0026891: Visualization, TKOpenGl - define more texture types within OpenGl_TextureFormatSelector